# ore-martingale-bot

./: .gitignore  Cargo.toml  README.md  config.example.json
.github/workflows/: build.yml
src/: client.rs  config.rs  discord.rs  keypair.rs  main.rs  subscription.rs
src/mining/: executor.rs  grid.rs  mod.rs  strategy.rs
src/ore/: instruction.rs  mod.rs  pda.rs  state.rs
