[package]
name = "ore-martingale-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana Core (Latest versions)
solana-sdk = "3.0.0"
solana-client = "3.0.10"
solana-program = "3.0.0"
solana-commitment-config = "3.0.0"

# Bytemuck for Pod/Zeroable
bytemuck = { version = "1.24", features = ["derive"] }

# Serialization
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures = "0.3"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
bs58 = "0.5"
base64 = "0.22"

# Discord Webhook Notifications
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
